Porfolio Bugfix: removed landing page overflow

--- a/css/index.css
+++ b/css/index.css
@@ -2,9 +2,19 @@
 /* GLOBAL */
 /* GLOBAL */
 
+html {
+  overflow: hidden;
+}
+
 * {
   box-sizing: border-box;
-  overflow: ;
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
 }
 
 body {
@@ -16,15 +26,6 @@ body {
   overflow: hidden;
 }
 
-.noselect {
-  -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-     -khtml-user-select: none; /* Konqueror HTML */
-       -moz-user-select: none; /* Firefox */
-        -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome and Opera */
-}
 
 .sideNote {
   background: #3E000C;
@@ -62,7 +63,7 @@ input, label {
     opacity: 0;
   }
   to {
-    opacity: 1;
+    opacity: 0.7;
   }
 }
 
@@ -92,13 +93,11 @@ input, label {
   background: #FFFFFF;
   position: fixed;
   z-index: 1030;
-  display: ;
   opacity: 0;
   transition: opacity 1s;
-  display: none;
 }
 
-#nav.fadein {
+#nav.fade {
   opacity: 1;
 }
 
@@ -169,21 +168,13 @@ input, label {
   overflow: hidden;
   opacity: 1;
   transition: opacity 0.3s;
+  background: url("../images/landing page/bg8.jpg");
+  background-size: cover;
+  background-position: center;
 }
 
 #landingPage.fade {
   opacity: 0;
-}
-
-#landingPageBackground {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background: url("../images/landing page/bg8.jpg");
-  background-size: cover;
-  background-position: center;
-  opacity: 0.9;
-  overflow: hidden;
 }
 
 #landingPageHeaderGroup {
@@ -227,6 +218,7 @@ input, label {
   justify-content: center;
   box-shadow: 0 1px 2px rgba(0,0,0,0.5);
   text-shadow: 0 1px 2px rgba(0,0,0,0.5);
+  outline: none;
 }
 
 /* ABOUT ME */
@@ -242,7 +234,7 @@ input, label {
   transition: opacity 1s;
 }
 
-#aboutMeSection.fadein {
+#aboutMeSection.fade {
   opacity: 1;
 }
 
@@ -628,9 +620,13 @@ input, label {
   background: #333;
   border-top: dashed 5px #222;
   color: #f4f4f4;
+}
+
+#footer h4 {
+  height: 98%;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
 /* LARGE LARGE LARGE LARGE LARGE LARGE LARGE */
